name: Mafia
version: 0.0.0.1
copyright: 2016, Federico Mastellone
-- license: AllRightsReserved
license-file: LICENSE
author: Federico Mastellone <fmaste@users.noreply.github.com>
maintainer: fmaste@users.noreply.github.com
homepage: http://www.github.com/fmaste/Mafia
bug-reports: https://github.com/fmaste/Mafia/issues
synopsis: A framework for packaging Haskell software
description:
  The Haskell alternative architecture for building applications and
  libraries, a framework defining a common interface for authors to more
  easily build their Haskell applications in a non-portable way.
category: Distribution
cabal-version: >= 1.24
build-type: Simple

extra-source-files:
  README.md
  CHANGELOG

source-repository head
  type:     git
  location: https://github.com/fmaste/Mafia/

library
   default-language: Haskell2010
   build-depends:
     base       >= 4.5 && < 5,
     time       >= 1.5,
     bytestring >= 0.9 && < 1,
     filepath   >= 1.3 && < 1.5,
     directory  >= 1.1 && < 1.3,
     containers >= 0.4 && < 0.6,
     process    >= 1.1.0.1 && < 1.5,
     Cabal      >= 1.24.0.0
   if !os(windows)
     build-depends:
       unix >= 2.5 && < 2.8
   if os(windows)
     build-depends:
       Win32 >= 2.2 && < 2.4
   ghc-options: -Wall -Werror
   if impl(ghc >= 8.0)
     ghc-options: -Wcompat -Wnoncanonical-monad-instances
                  -Wnoncanonical-monadfail-instances
   exposed-modules:
     Distribution.Compat.CreatePipe
   other-modules:
     Distribution.Compat.CopyFile

Executable mafia
    main-is: Mafia.hs
    hs-source-dirs: main src
    default-language: Haskell2010
    build-depends:
        base >= 4.5 && < 5,
        time >= 1.6,
        bytestring >= 0.10.8,
        binary >= 0.8.3,
        filepath   >= 1.3 && < 1.5,
        directory  >= 1.1 && < 1.3,
        containers >= 0.4 && < 0.6,
        process >= 1.4.2.0,
        ghc-boot >= 8.0.1,
        Cabal >= 1.24.0.0
    other-modules:
        Distribution.Mafia.Build
        Distribution.Mafia.Cabal
        Distribution.Mafia.GHC
        Distribution.Mafia.Hackage
        Distribution.Mafia.Paths
        Distribution.Mafia.Solver
        Distribution.Mafia.Types
    ghc-options: -Wall -threaded
    ghc-prof-options:
    ghc-shared-options:

